--- a/translations/items+intl-icu.en.xlf
+++ b/translations/items+intl-icu.en.xlf
@@ -9191,5 +9191,16 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
         <target><![CDATA[You light a cigarette. The smoke makes you cough violently, no doubt because you're not used to it... After a few minutes, <strong>you manage to calm down</strong>. This brief moment of respite allows you to clear your mind a little and take stock of the situation.<hr />You crush the stub on the ground ready to fight for survival once more!<t-consumed><hr />You notice that <strong>the packet is empty</strong>!</t-consumed>]]></target>
       </segment>
     </unit>
+    <unit id="5MlxE2I" name="Gegenstand verwenden">
+      <notes>
+        <note category="german">Gegenstand verwenden</note>
+        <note category="from">twig:///templates/ajax/game/actions.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Gegenstand verwenden</source>
+        <target>Use an object from my rucksack</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
