--- a/translations/ghost+intl-icu.es.xlf
+++ b/translations/ghost+intl-icu.es.xlf
@@ -1695,7 +1695,7 @@
       </notes>
       <segment>
         <source>Event-Städte werden nicht ins Ranking aufgenommen und erhalten eine spezielle Markierung in der Stadtliste.</source>
-        <target>Los pueblos de evento no están incluidoas en el ranking y están especialmente marcadas en la lista de pueblos.</target>
+        <target>Los pueblos de evento no están incluidos en el ranking y están especialmente marcadas en la lista de pueblos.</target>
       </segment>
     </unit>
     <unit id="yP7t0FZ">
