ES Translation-Soul

--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -3803,8 +3803,8 @@
       <segment>
         <source>Öffne MyHordes in einem größeren Fenster oder auf einem Gerät mit einem größeren Bildschirm,
                                                 um den Bildausschnitt für die komprimierte Anzeige einzustellen.</source>
-        <target>Öffne MyHordes in einem größeren Fenster oder auf einem Gerät mit einem größeren Bildschirm,
-                                                um den Bildausschnitt für die komprimierte Anzeige einzustellen.</target>
+        <target>Abra MyHordes en una ventana más grande o en un dispositivo con una pantalla más grande,
+                                                para configurar la sección de imagen para la pantalla comprimida.</target>
       </segment>
     </unit>
   </file>
